--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.9.1
+audioop-lts==0.2.1
+audioread==3.0.1
 certifi==2025.7.14
+cffi==1.17.1
 charset-normalizer==3.4.2
+decorator==5.2.1
 Django==5.2.4
+django-environ==0.12.0
+djangorestframework==3.16.0
 filelock==3.18.0
 fsspec==2025.7.0
 hf-xet==1.1.5
@@ -9,10 +15,15 @@ huggingface-hub==0.33.4
 idna==3.10
 Jinja2==3.1.6
 joblib==1.5.1
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
+msgpack==1.1.1
 networkx==3.5
-numpy==2.3.1
+numba==0.61.2
+numpy==2.2.6
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu12==12.6.77
@@ -30,6 +41,10 @@ nvidia-nvtx-cu12==12.6.77
 packaging==25.0
 pgvector==0.4.1
 pillow==11.3.0
+platformdirs==4.3.8
+pooch==1.8.2
+psycopg2==2.9.10
+pycparser==2.22
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
@@ -38,7 +53,12 @@ scikit-learn==1.7.1
 scipy==1.16.0
 sentence-transformers==5.0.0
 setuptools==80.9.0
+soundfile==0.13.1
+soxr==0.5.0.post1
 sqlparse==0.5.3
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.2
