--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+amqp==5.3.1
 asgiref==3.9.1
 audioop-lts==0.2.1
 audioread==3.0.1
+billiard==4.2.1
+celery==5.5.3
 certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 decorator==5.2.1
 Django==5.2.4
 django-environ==0.12.0
@@ -15,6 +22,7 @@ huggingface-hub==0.33.4
 idna==3.10
 Jinja2==3.1.6
 joblib==1.5.1
+kombu==5.5.4
 lazy_loader==0.4
 librosa==0.11.0
 llvmlite==0.44.0
@@ -43,9 +51,12 @@ pgvector==0.4.1
 pillow==11.3.0
 platformdirs==4.3.8
 pooch==1.8.2
+prompt_toolkit==3.0.51
 psycopg2==2.9.10
 pycparser==2.22
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
+redis==5.2.1
 regex==2024.11.6
 requests==2.32.4
 safetensors==0.5.3
@@ -53,6 +64,7 @@ scikit-learn==1.7.1
 scipy==1.16.0
 sentence-transformers==5.0.0
 setuptools==80.9.0
+six==1.17.0
 soundfile==0.13.1
 soxr==0.5.0.post1
 sqlparse==0.5.3
@@ -67,4 +79,7 @@ tqdm==4.67.1
 transformers==4.53.3
 triton==3.3.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
