--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.3.1
 asgiref==3.9.1
 audioop-lts==0.2.1
 audioread==3.0.1
+beautifulsoup4==4.13.5
 billiard==4.2.1
 celery==5.5.3
 certifi==2025.7.14
@@ -66,6 +67,7 @@ sentence-transformers==5.0.0
 setuptools==80.9.0
 six==1.17.0
 soundfile==0.13.1
+soupsieve==2.8
 soxr==0.5.0.post1
 sqlparse==0.5.3
 standard-aifc==3.13.0
@@ -75,6 +77,7 @@ sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.2
 torch==2.7.1
+torchvision==0.22.1
 tqdm==4.67.1
 transformers==4.53.3
 triton==3.3.1
