--- a/ai_search_engine_project/requirements.txt
+++ b/ai_search_engine_project/requirements.txt
@@ -18,6 +18,7 @@ django-environ==0.12.0
 djangorestframework==3.16.0
 filelock==3.18.0
 fsspec==2025.7.0
+gunicorn==23.0.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
 idna==3.10
